web/Tolstoy.css
/* ... */
.layoutStyleMenu {

    background: transparent;
}

.layoutStyle {
    background-size: cover;
    background: transparent left top;
    width: 100%;
    height: 100vh;

}

@keyframes mymove {
    from {
        background-color: red;
    }
    to {
        background-color: blue;
    }
}

.textSign {

    font-family: Verdana sans-serif cursive;
    color: #006666;
    font-size: 1em;
    text-align: right;
    width: 85%;
    min-width: 10em;
    margin-left: 2em;

    /*text-indent: 50px;*/
}

.textRef {

    font-family: Verdana sans-serif;
    color: #3e4a83;
    font-size: 1em;
    margin-top: 2em;
    margin-bottom: 1em;
    border-top: thin white;

    /*text-indent: 50px;*/
}

/*.flow  div::first-letter {*/
/*font-size: 1.2em;*/
/*color: #834209;*/
/*margin-left: 1em;*/
/*margin-top: 1em;*/
/*}*/

.flow {

    background: #F5F1EA;
    /*text-indent: 50px;*/
    /*margin-left: 10em;*/
    /*margin-right: 10em;*/
    font-family: "Helvetica Neue";
    max-width: 40em;
    margin: auto;
    padding: 0 1em;
    color: #09352e;

}

.scrollPanel {

    background: #F5F1EA;
    scroll-behavior: smooth;

}

.flowMain {

    background: #eef5dd;
    font-family: "Helvetica Neue";
    max-width: 75%;
    color: #09352e;
    opacity: 0.94;
    filter: alpha(opacity=94);
     height: 90vh;
        overflow: auto;   

}

.flowComments {

    background: #eef5dd;
    font-family: "Helvetica Neue";
    max-width: 40em;
    color: #09352e;
    opacity: 0.95;
    filter: alpha(opacity=90);
     height: 90vh;
        overflow: auto;
}

.titleBar {

    /*margin-left: 15em;*/

    width: 100%;
    background-color: transparent;

}

.langSelector {
    margin-left: 3em;
    margin-top: 1em;
    width: 5em;
    position: absolute;
}

.commentText {

    color: darkolivegreen;
    margin-top: 2em;
    font-size: 1em;
    font-family: "Helvetica Neue", sans-serif;
    margin-left: 3em;
}

.commentTextDefault {
    color: lightgrey;
    font-family: "Helvetica Neue", sans-serif;

    margin-top: 2em;
    font-size: 1em;
    margin-left: 3em;
}

.buttonRed {
    border: none;
    background: url(button.png) repeat top left;

    background-size: cover;

    color: white;
    font-family: "Helvetica Neue", sans-serif;
    font-size: 0.9em;
    width: 6em;
    height: 2em;

    margin-top: 1em;
    margin-left: 3em;
    cursor: hand;

}

.buttonRed:focus {
    cursor: hand;
    outline: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.buttonRed:active {
    outline: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
    margin-bottom: 5em;

}

.feedback {

    color: chocolate;
    margin-top: 1em;
    font-size: 1em;
    font-family: "Helvetica Neue", sans-serif;
    margin-left: 3em;
}

.redArrImage {

    vertical-align: middle;

}

.subtitle {
    color: white;
    /*font-family: 'Oranienbaum', serif;*/
    font-family: 'Yanone Kaffeesatz', sans-serif;
    /*font-family: 'Oswald', sans-serif;*/
    /*font-weight: 200; */
    font-style: normal;
    font-size: 5vw;

    /*margin-left: 2em;*/
    margin-top: 6em;

    overflow-wrap: break-spaces;
    width: 100%;
    white-space: pre;

    text-underline: thick;
    text-underline-color: #f8a600;
    /*text-underline-position: below;*/

}

.subtitle:hover {

    cursor: pointer;
    /*text-decoration-line: underline;*/
}

.textPara {

    padding-top: 1.2em;
    font-family: 'Open Sans', sans-serif;
    color: #09352e;
    width: 92%;
    min-width: 10em;
    margin-left: 2em;
    text-align: justify;
    text-justify: inter-word;
    font-size: 1.2em;
    right: 0;

}

.langSel a {
    color: #FF675D;
    font-family: 'Open Sans', sans-serif;
    font-size: 0.8em;
    text-decoration: none;
    cursor: pointer;
}

.langUnsel a {
    color: #026671;
    font-family: 'Open Sans', sans-serif;
    font-size: 0.8em;
    text-decoration: none;
    cursor: pointer;
}

.search_examples {
    color: #0a55a7;
    font-family: 'Open Sans', sans-serif;
    font-size: 0.9em;
    text-decoration: none;
    cursor: pointer;
    padding-left: 2em;
    padding-top: 1em;
}

.navigation {
    padding-top: 1em;
    padding-left: 4em;
}

.navigation a {

    color: white;
    font-family: 'Open Sans', sans-serif;
    font-size: 0.9em;
    text-decoration: none;
    cursor: pointer;
}

.navigationSel {
    padding-top: 1em;
    padding-left: 4em;
    /*text-decoration-line: underline;*/
    /*text-decoration-style: solid;*/
    /*text-underline-position: below;*/

}

.navigationSel a {

    font-family: 'Open Sans', sans-serif;
    font-size: 0.9em;
    text-decoration: none;
    cursor: pointer;
    /*text-decoration-color: #FF675D;*/
    color: #f8a600;

}

.divider {

    color: #026671;
    font-family: 'Open Sans', sans-serif;
}

.lang {

    margin-right: 2em;

}

.arrorNav a {
    color: white;
    font-family: 'Prata', serif;
    text-decoration: none;
    vertical-align: middle;
    margin-right: 1em;
    cursor: pointer;
    font-size: 1.3em;
}

.arrorNav a:hover {
    text-decoration-line: underline;
    text-decoration-style: dotted;

    cursor: pointer;
    text-decoration-color: #07ccff;
    text-decoration-skip: edges;
}

.menuIcon {

    margin-right: 2.5em;
    cursor: pointer;

}

.tst {
    padding-top: 1.2em;

    color: #FF675D;
    width: 85%;
    min-width: 10em;
    margin-left: 2em;
    text-align: justify;
    text-justify: inter-word;
}

.tst a:link {
    color: #FF675D;
    font-family: 'Open Sans', sans-serif;
    text-decoration: none;
    cursor: pointer;
}

.hand {
    position: relative;
    left: -150px;
    top: 0;

}

.seachBox {

    width: 100%;
    /*border: thin solid gray;*/
    height: 2.3em;
    /*margin-left: 2em;*/

    border-radius: 5px;
    border: thin solid #335214;
    font-family: 'Open Sans', sans-serif;
    font-size: 1.1em;
    padding-top: 5px;
    margin-top: 3px;

}

.seachBox:focus {

    outline: none;

    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
}
/* ... */

